Resolves: tdf#160635 allow larger tiff images

Change-Id: I67a21877e7e75c2753218a7e6c978f691d679583
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168720
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>